# cancer_detector

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: deploy-through-tunnel.yml
app/: __init__.py  config.py  inference.py  main.py  samples.py
cancer_detector.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
data/artifacts/demo_samples/: README.md
data/artifacts/models/classifier_v2_seed7_qc_champion/: inference_config_balanced_ensemble.json  inference_config_high_recall.json
data/artifacts/runs/classifier_full_sota_v2/checkpoints/: best_auc.pt  last.pt
data/artifacts/runs/classifier_full_sota_v2_qc/checkpoints/: best_auc.pt  last.pt
data/artifacts/runs/classifier_full_sota_v2_seed7/checkpoints/: best_auc.pt  last.pt
data/artifacts/runs/ensemble_v2_seed7_qc_eval/: summary.json
data/artifacts/runs/ensemble_v2_seed7_qc_eval_r090/: summary.json
deploy/: README.md  check_ports.sh
deploy/local/: deploy_pull_restart.sh
deploy/local/systemd/: oncoview-api.service  oncoview-reverse-tunnel.service
deploy/vps/nginx/: oncoview.conf
frontend/: app.js  index.html  styles.css
scripts/: build_classification_manifest.py  build_inference_configs.py  build_mini_classification_manifest.py  build_mini_dataset.py  create_splits.py  evaluate_classifier_ensemble.py  filter_classification_manifest_quality.py  index_dicom_headers.py  preview_dicom.py  report_dataset.py  select_classifier_checkpoint.py  train_classifier.py  train_resume_demo.py  verify_tcia_download.py
scripts/training/: checkpointing.py
